--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page</title>
 </head>
+
 <body>
-    <h1>heading111111</h1>
-    <h2>heading2</h2>
-    <h3>heading3</h3>
-    <h4>heading4</h4>
-    <h5>heading5</h5>
-    <h6>heading6</h6>
-    
+    <img src="./images/45681a49-9ed0-4076-9ced-7bc55321817b.jfif" alt="some picture" width="150px"
+        style="margin: 20px; float: left; border-radius: 20px;">
+    <br>
+    <h1 style="color: red;">Hi there........</h1>
+    <p style="color: peru;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit placeat dolorum
+        neque mollitia ut
+        nobis ad saepe, animi quos eveniet veritatis quae recusandae quaerat obcaecati quisquam molestiae odio deleniti
+        repudiandae reprehenderit. Esse architecto reprehenderit quo! Corporis at odio eaque numquam qui optio.
+        Repellendus enim laudantium unde,</p><br>
+    <p><B>MY Career So Far....</B></p>
+    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, vitae? Error assumenda iure rerum expedita
+        asperiores obcaecati architecto accusantium, animi vel exercitationem nisi aut nulla magnam minus libero? Illo
+        iure aut obcaecati esse, expedita minima? Autem perspiciatis voluptas, dignissimos minus aperiam asperiores
+        atque laborum quis ullam corporis, sequi, ipsum nam.</p>
 </body>
+
 </html>
