--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, vitae? Error assumenda iure rerum expedita
         asperiores obcaecati architecto accusantium, animi vel exercitationem nisi aut nulla magnam minus libero? Illo
         iure aut obcaecati esse, expedita minima? Autem perspiciatis voluptas, dignissimos minus aperiam asperiores
-        atque laborum quis ullam corporis, sequi, ipsum nam.</p>
+        atque laborum quis ullam corporis, sequi, ipsum nam..</p>
 </body>
 
 </html>
