--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 <body>
     <img src="./images/45681a49-9ed0-4076-9ced-7bc55321817b.jfif" alt="some picture" width="150px"
-        style="margin: 20px; float: left; border-radius: 20px;">
+        style="margin: 20px; float: left; border-radius: 10px;">
     <br>
     <h1 style="color: red;">Hi there........</h1>
     <p style="color: peru;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit placeat dolorum
         neque mollitia ut
         nobis ad saepe, animi quos eveniet veritatis quae recusandae quaerat obcaecati quisquam molestiae odio deleniti
         repudiandae reprehenderit. Esse architecto reprehenderit quo! Corporis at odio eaque numquam qui optio.
-        Repellendus enim laudantium unde,</p><br>
-    <p><B>MY Career So Far....</B></p>
-    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, vitae? Error assumenda iure rerum expedita
+        Repellendus enim laudantium unde,</p><br><br><br>
+   <h2 style="color: green;">My Career So Far</h2>
+    <p style="color: rgb(40, 12, 67);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, vitae? Error assumenda iure rerum expedita
         asperiores obcaecati architecto accusantium, animi vel exercitationem nisi aut nulla magnam minus libero? Illo
         iure aut obcaecati esse, expedita minima? Autem perspiciatis voluptas, dignissimos minus aperiam asperiores
         atque laborum quis ullam corporis, sequi, ipsum nam..</p>
