--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -22,6 +23,62 @@
         asperiores obcaecati architecto accusantium, animi vel exercitationem nisi aut nulla magnam minus libero? Illo
         iure aut obcaecati esse, expedita minima? Autem perspiciatis voluptas, dignissimos minus aperiam asperiores
         atque laborum quis ullam corporis, sequi, ipsum nam...</p>
-</body>
+        <h2><u>Links</u></h2>
+        <a href="https://www.google.com/"> aaaa</a>|<br>
+
+      <a href="https://www.facebook.com/"> bbbb</a>|<br>
+      <a href="https://udreamit.netlify.app/"> Udreamit</a>
+      <h2><u>List</u></h2>
+      <p>UnorderList</p>
+      <ul type="square" style="color: blue; font-size: 20px;">
+        <li>mango</li>
+        <li>banana</li>
+        <li>orange</li>
+        <li>grape</li>
+        <li>kiwi</li>
+        <li>pineapple</li>
+      </ul>
+      <h2><u>OrderedList</u></h2>
+      <ol type="1" start="4" style="color: blue; font-size: 20px;">
+        <li>html</li>
+        <li>css</li>
+        <ul>
+          <li>a</li>
+          <li>b</li>
+          <li>c</li>
+          <li>d</li>
+        </ul>
+        <li>javascript</li>
+        <li>jcode</li>
+        <li>ds</li>
+        <li>php</li>
+      </ol>
+      <h2>Table</h2>
+      <table border="1" style="border-collapse: collapse;" width: 25%; margin: 20px 0; align: align="center" >
+        <caption>This is my table</caption>
+        <tr>
+          <th style="padding: 8px; text-align: left;">Name</th>
+          <th style="padding: 8px; text-align: left;">Age</th>
+          <th style="padding: 8px; text-align: left;">Country</th>
+          <th style="padding: 8px; text-align: left;">india</th>
+          <th style="padding: 8px; text-align: left;">karnataka</th>
+        </tr>
+        <tr>
+          <td style="padding: 8px;">John Doe</td>
+          <td style="padding: 8px;" colspan="2">30</td>
+          <td style="padding: 8px;">USA</td>
+          <td style="padding: 8px;">Maharashtra</td>
+      
+        </tr>
+        <tr>
+          <td style="padding: 8px;">Jane Smith</td>
+          <td style="padding: 8px;">25</td>
+          <td style="padding: 8px;">UK</td>
+          <td style="padding: 8px;">mk</td>
+          <td style="padding: 8px;">se</td>
+         
+        </tr>
+      </table>
+    </body>
 
 </html>
